feat: add dtos user
